ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: "2023-11-14T20:17:43Z"
  generation: 2
  name: main
  namespace: default
  resourceVersion: "13381"
  uid: 2b261559-68df-48cf-9920-d6d40ec2a335
spec:
  ingressClassName: nginx
  rules:
  - host: cluster.weblightenment.com
    http:
      paths:
      - backend:
          service:
            name: my-service-v1
            port:
              number: 80
        path: /app1/
        pathType: Exact
  - host: cluster.weblightenment.com
    http:
      paths:
      - backend:
          service:
            name: my-service-v2
            port:
              number: 80
        path: /app2/
        pathType: Exact
status:
  loadBalancer:
    ingress:
    - hostname: a693762793256442fad2b9efddeba489-545190260.eu-central-1.elb.amazonaws.com
